<resources>
    <string name="app_name">FunnyPot</string>
    <string name="hi">Hi</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stores">FunnyPot</string>
    <string name="funnypot">FunnyPot</string>
    <string name="pupular_items">Popular items</string>
    <string name="product_image">product_image</string>
    <string name="featured_items">New Items</string>
    <string name="my_favourite">My Favourite</string>
    <string name="describtion">Description : </string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="your_name_is">Your Name is?</string>
    <string name="address">Address</string>
</resources>