<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   >




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.ItemDetails">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:background="@drawable/bg_toolbar"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="22dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
            <ImageView
                android:id="@+id/logo"
                android:paddingTop="20dp"
                android:paddingBottom="22dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="46dp"
                android:layout_weight="1"
                android:visibility="invisible"
                android:gravity="start"
                android:text="@string/funnypot"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/wighlist_btn"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="22dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/heart" />
            <ImageView
                android:id="@+id/cart_btn"
                android:paddingStart="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="22dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cart" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:elevation="10dp"
            android:layout_marginBottom="-25dp"
            app:layout_constraintBottom_toBottomOf="@+id/main_Image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/sec"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/sec2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/sec3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="15dp"
            android:src="@drawable/logo"
            android:id="@+id/main_Image_card"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/main_Image"
                android:scaleType="fitXY"
                android:src="@drawable/logo"/>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/price_product"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/main_Image_card"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/main_Image_card" />

        <TextView
            android:id="@+id/title_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/main_Image_card"
            />

        <TextView
            android:id="@+id/Desc_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/describtion"
            android:textSize="20sp"
            android:visibility="gone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_product" />

        <WebView
            android:id="@+id/desc_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_box"
            android:padding="25dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/main_Image_card"
            app:layout_constraintStart_toStartOf="@+id/main_Image_card"
            app:layout_constraintTop_toBottomOf="@+id/price_product" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="158dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/add_to_cart"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/main_Image_card"
            app:layout_constraintTop_toBottomOf="@+id/desc_details" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_details">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/bg_circle"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:id="@+id/add_more"
                android:src="@drawable/add_svgrepo_com" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:id="@+id/count_tv"
                android:text="1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="2dp"
                android:background="@drawable/bg_circle"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:id="@+id/remove_more"
                android:src="@drawable/remove_svgrepo_com" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>